Deploy quiz update v20260301-98bd8a4f

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <meta name="app-version" content="v20260301-477f7e9d">
+  <meta name="app-version" content="v20260301-98bd8a4f">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#0f0e17">
 <meta name="mobile-web-app-capable" content="yes">
@@ -580,7 +580,7 @@ header p{color:var(--muted);font-family:'DM Mono',monospace;font-size:.7rem;text
 
 <header>
   <h1>English <span>Grammar</span> Quiz</h1>
-  <p id="hdr-sub"><span id="hdr-player">multiple choice · fill the gap · smart repetition</span> <span id="hdr-ver" style="opacity:.45;font-size:.65rem">477f7e9d</span></p>
+  <p id="hdr-sub"><span id="hdr-player">multiple choice · fill the gap · smart repetition</span> <span id="hdr-ver" style="opacity:.45;font-size:.65rem">98bd8a4f</span></p>
 </header>
 
 <!-- TABS -->
@@ -1821,7 +1821,7 @@ exp:'<strong>Put out</strong> (a fire) = extinguish it. Separable: <em>put the f
 
 // ══ PREPOSITIONS — TYPE-IN (STAGE 1) ══
 
-{id:'pr_ti01',lvl:'B2',biz:false,cat:'Prepositions',type:'input',q:'She has been working ___ her own on this project for three weeks.',ans:'on',hint:'on / by / for / at',exp:'<strong>On one\'s own</strong> = without help, independently. Always <em>on</em> — not <em>by my own</em> (a common Russian translation error). <em>I did it on my own / she manages on her own.</em>'},
+{id:'pr_ti01',lvl:'B2',biz:false,cat:'Prepositions',type:'input',q:'She has been working ___ her own on this project for three weeks.',ans:'on',hint:'(1 word — preposition)',exp:'<strong>On one\'s own</strong> = without help, independently. Always <em>on</em> — not <em>by my own</em> (a common Russian translation error). <em>I did it on my own / she manages on her own.</em>'},
 {id:'pr_ti02',lvl:'B2',biz:true,cat:'Prepositions',type:'input',q:'The outcome of the negotiation depends ___ how well we prepare.',ans:'on',hint:'depend ___ something',exp:'<strong>Depend on</strong> — always <em>on</em>. <em>It depends on the budget / depends on the client.</em> Never <em>depend from</em> — Russian <em>зависит от</em> maps to English <em>on</em>, not <em>from.</em>'},
 {id:'pr_ti03',lvl:'B2',biz:true,cat:'Prepositions',type:'input',q:'After years in the industry, she is highly experienced ___ stakeholder management.',ans:'in',hint:'experienced ___ a field',exp:'<strong>Experienced in</strong> + field or area. <em>Experienced in finance / experienced in leading teams.</em> Compare: <em>good at</em> (skill performance) vs <em>experienced in</em> (domain).'},
 {id:'pr_ti04',lvl:'B2',biz:true,cat:'Prepositions',type:'input',q:'He is not aware ___ the changes to the reporting structure.',ans:'of',hint:'aware ___ something',exp:'<strong>Aware of</strong> = knowing about something. Always <em>of</em>. <em>Are you aware of the risk? / fully aware of the implications.</em>'},
@@ -1845,11 +1845,11 @@ exp:'<strong>Put out</strong> (a fire) = extinguish it. Separable: <em>put the f
 
 // ══ IDIOMS — TYPE-IN (STAGE 3) ══
 
-{id:'id_ti01',lvl:'C1',biz:false,cat:'Idioms',type:'input',q:'They followed the ___ of the law perfectly, but completely ignored its spirit.',ans:'letter',hint:'letter / spirit — the exact wording (1 word)',exp:'<strong>The letter of the law</strong> = the exact literal wording. <strong>The spirit of the law</strong> = the intended purpose. Used when someone technically obeys a rule while violating its intent.'},
+{id:'id_ti01',lvl:'C1',biz:false,cat:'Idioms',type:'input',q:'They followed the ___ of the law perfectly, but completely ignored its spirit.',ans:'letter',hint:'(1 word)',exp:'<strong>The letter of the law</strong> = the exact literal wording. <strong>The spirit of the law</strong> = the intended purpose. Used when someone technically obeys a rule while violating its intent.'},
 {id:'id_ti02',lvl:'C1',biz:true,cat:'Idioms',type:'input',q:'Long hours and last-minute changes are ___ for the course in investment banking.',ans:'par',hint:'___ for the course (1 word, from golf)',exp:'<strong>Par for the course</strong> = exactly what you would expect, even if unpleasant. From golf: par = the expected number of strokes. <em>Delays are par for the course in construction.</em>'},
 {id:'id_ti03',lvl:'C1',biz:true,cat:'Idioms',type:'input',q:'The salary is enormous but the culture is toxic — he is caught in the ___.',ans:'golden handcuffs',hint:'financial incentives that trap you in a job (2 words)',exp:'<strong>Golden handcuffs</strong> = high pay or benefits that make it financially difficult to leave. The <em>gold</em> = the reward; the <em>handcuffs</em> = the trap.'},
 {id:'id_ti04',lvl:'C1',biz:false,cat:'Idioms',type:'input',q:'You have ___ off more than you can chew with this project — it is too ambitious.',ans:'bitten',hint:'past participle of bite (1 word)',exp:'<strong>Bite off more than you can chew</strong> = take on more than you can handle. With <em>have</em> requires the past participle: <em>bitten.</em>'},
-{id:'id_ti05',lvl:'C1',biz:true,cat:'Idioms',type:'input',q:'We are all ___ the same boat here — the budget cuts affect every department.',ans:'in',hint:'in the same boat (1 word — the preposition)',exp:'<strong>In the same boat</strong> = in the same difficult situation. The preposition is always <em>in.</em> <em>We are all in the same boat.</em>'},
+{id:'id_ti05',lvl:'C1',biz:true,cat:'Idioms',type:'input',q:'We are all ___ the same boat here — the budget cuts affect every department.',ans:'in',hint:'(1 word — preposition)',exp:'<strong>In the same boat</strong> = in the same difficult situation. The preposition is always <em>in.</em> <em>We are all in the same boat.</em>'},
 {id:'id_ti06',lvl:'C1',biz:false,cat:'Idioms',type:'input',q:'She really ___ the nail on the head with that analysis — exactly the right diagnosis.',ans:'hit',hint:'past tense (1 word, irregular)',exp:'<strong>Hit the nail on the head</strong> = identify something exactly right. Past tense: <em>hit</em> (irregular — same form). <em>She hit the nail on the head.</em>'},
 
 // ══ REPORTED SPEECH — TYPE-IN (STAGE 4) ══
@@ -2574,7 +2574,12 @@ function renderQ() {
     optsEl.appendChild(sentenceEl);
     const hint = document.createElement('div');
     hint.className = 'input-hint';
-    hint.textContent = q.hint || 'Type the missing phrasal verb in the correct tense';
+    hint.id = 'input-hint-text';
+    // Extract only word count/form info, hide semantic clues until after first attempt
+    const hintFull = q.hint || 'Type the missing word';
+    const wordCountMatch = hintFull.match(/\(([^)]+)\)/);
+    hint.textContent = wordCountMatch ? '(' + wordCountMatch[1] + ')' : '';
+    hint.dataset.fullHint = hintFull;
     optsEl.appendChild(hint);
     const wrap = document.createElement('div');
     wrap.className = 'input-wrap';
@@ -2852,6 +2857,12 @@ async function answerInput() {
     reveal.className = 'input-correct-reveal';
     reveal.innerHTML = '\u2705 Correct: <em>' + accepted.join(' / ') + '</em>';
     document.getElementById('q-options').appendChild(reveal);
+    // Reveal full hint after wrong attempt
+    const hintEl = document.getElementById('input-hint-text');
+    if (hintEl && hintEl.dataset.fullHint) {
+      hintEl.textContent = hintEl.dataset.fullHint;
+      hintEl.style.color = 'var(--yellow)';
+    }
   }
   await recordAnswer(correct, q);
 }
